index.html handles both sign in and sign out Current status: works as expected:  when the user loads the page, the onload function will be called, which will check the authentication status. If the user is logged in, the sign out button will appear, which allows the user to sign out by clicking in. If the user hasn't logged in, the sign in widget will appear.

--- a/step-capstone/public/index.html
+++ b/step-capstone/public/index.html
@@ -6,28 +6,32 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Smart Travel Assistant's Sign In Page"
     />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-    <title>React App</title>
+    <title>Smart travel assistant</title>
+    <!--Firebase configuration-->    
+    <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.css" />
+  
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <body onload="onloadFunction()">
+    <a class="brand-logo">
+      <img src="images/zed-logo.png" style="width: 100px; margin-top: 10px;">
+      <h1>Welcome to Zed - The Smart Travel Assistant</h1>
+    </a>
+    <div id="root">
+    
       <div id="firebaseui-auth-container"></div>
+
+      <div id="sign-in-status"></div>
+      <div id="sign-in">
+        <Button id="sign-out" display="none">Sign Out</Button>
+      </div>
+      <pre id="account-details"></pre>
+      
+    </div>
   </body>
 </html>
