--- a/step-capstone/public/index.html
+++ b/step-capstone/public/index.html
@@ -11,6 +11,7 @@
     <title>Smart travel assistant</title>
     <!--Firebase configuration-->    
     <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.4/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.js"></script>
