Load places library into project

--- a/step-capstone/public/index.html
+++ b/step-capstone/public/index.html
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8HF6JnEpK-nDbWR3X9hKJllBKkRcBVbU&libraries=places"></script>
   
   </head>
   <body>
